--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                         {% if user.is_authenticated %}
                         <a href="{% url 'users:logout' %}">LOGOUT</a>
                         {% else %}
-                        <a href="{% url 'users:login' %}">LOGIN</a>
+                        <a href="{% url 'users:login' %}">SIGN IN</a>
                         {% endif %}
                     </div>
                 </div>
