--- a/static/css/show_requisites.css
+++ b/static/css/show_requisites.css
@@ -74,3 +74,14 @@
 .button:hover, .search-button:hover {
     background-color: #707070;
 }
+
+table {
+    width: 100%;
+}
+
+.table-head {
+    height: 2em;
+    font-weight: bold;
+    font-size: 1.5em;
+    background-color: #707070;
+}
