--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,17 +2,18 @@
 {% load static %}
 
 {% block style %}
-
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
 
 {% block content %}
 <div class="correction" style="margin-top:4em;"></div>
+<div class="main-content">
+    <div class="greeting">Please log in!</div>
 
-<div class="greeting">Please log in!</div>
-
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" class="confirm-button">confirm</button>
-</form>
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="confirm-button">confirm</button>
+    </form>
+</div>
 {% endblock %}
