--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                         <a href="{% url 'users:register' %}">SIGN UP</a>
                         {% endif %}
                     </div>
-                    <pre> / </pre>
+                    <pre> | </pre>
                     <div class="right-side">
                         {% if user.is_authenticated %}
                         <a href="{% url 'users:logout' %}">LOGOUT</a>
